Added classes concerning wizard: GeoLocation, TimeSlot, WizardData

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
 
         <service android:name=".Service.ReminderService" />
 
+        <activity
+            android:name=".Wizard.WizardActivity"
+            android:label="@string/title_activity_wizard" >
+        </activity>
     </application>
 
 </manifest>
