--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.chronos.themeprojectitsmap_201270746" >
 
+
+    <uses-permission android:name="android.permission.READ_CALENDAR"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -22,6 +25,8 @@
         </activity>
 
         <service android:name=".Service.ReminderService" />
+
+
 
         <activity
             android:name=".Wizard.WizardActivity"
