--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
 
         <service
             android:name=".Service.ReminderService"
-            android:process="remote"
+            android:process=":remote"
             />
 
         <activity
